--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://caljohns611.github.io/Firebase-E-commerce-store-for-resume/",
   "name": "resume-project",
   "private": true,
   "version": "0.0.0",
